ASC Prod BAckup/ASC Prod/force-app/main/default/objects/ProductAttribute/fields/NormalizedSize__c.field-meta.xml
<CustomField>
    <fullName>NormalizedSize__c</fullName>
    <formula>Product.NormalizedSize__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NormalizedSize</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>