ASC Prod BAckup/ASC Prod/force-app/main/default/objects/ProductAttribute/fields/Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>Unit_Size__c</fullName>
    <label>Unit Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>.025mole</fullName>
            </value>
            <value>
                <fullName>.05mole</fullName>
            </value>
            <value>
                <fullName>.25mole</fullName>
            </value>
            <value>
                <fullName>.500mg</fullName>
            </value>
            <value>
                <fullName>0.001mole</fullName>
            </value>
            <value>
                <fullName>0.01mole</fullName>
            </value>
            <value>
                <fullName>0.05mole</fullName>
            </value>
            <value>
                <fullName>0.1mole</fullName>
            </value>
            <value>
                <fullName>0.25mole</fullName>
            </value>
            <value>
                <fullName>0.2mole</fullName>
            </value>
            <value>
                <fullName>0.5mg</fullName>
            </value>
            <value>
                <fullName>0.5ml</fullName>
            </value>
            <value>
                <fullName>0.5mole</fullName>
            </value>
            <value>
                <fullName>1000g</fullName>
            </value>
            <value>
                <fullName>1000m</fullName>
            </value>
            <value>
                <fullName>1000 x 200mm</fullName>
            </value>
            <value>
                <fullName>100cm</fullName>
            </value>
            <value>
                <fullName>100g</fullName>
            </value>
            <value>
                <fullName>100g soln.</fullName>
            </value>
            <value>
                <fullName>100m</fullName>
            </value>
            <value>
                <fullName>100mg</fullName>
            </value>
            <value>
                <fullName>100ml</fullName>
            </value>
            <value>
                <fullName>100mm</fullName>
            </value>
            <value>
                <fullName>100mml</fullName>
            </value>
            <value>
                <fullName>100 x 100mm</fullName>
            </value>
            <value>
                <fullName>100 x 125mm</fullName>
            </value>
            <value>
                <fullName>100 x 200mm</fullName>
            </value>
            <value>
                <fullName>100 x 25mm</fullName>
            </value>
            <value>
                <fullName>100 x 300mm</fullName>
            </value>
            <value>
                <fullName>100 x 30cm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>